[gd_scene load_steps=32 format=2]

[ext_resource path="res://resources/scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/backgrounds/startup.png" type="Texture" id=2]
[ext_resource path="res://resources/icon/settings.png" type="Texture" id=3]
[ext_resource path="res://resources/backgrounds/GameName.png" type="Texture" id=4]
[ext_resource path="res://resources/jets/jet1.png" type="Texture" id=5]
[ext_resource path="res://mainstyle.tres" type="StyleBox" id=6]
[ext_resource path="res://resources/icon/play.png" type="Texture" id=7]
[ext_resource path="res://shopstyle.tres" type="StyleBox" id=8]
[ext_resource path="res://resources/icon/shop.png" type="Texture" id=9]
[ext_resource path="res://statsstyle.tres" type="StyleBox" id=10]
[ext_resource path="res://resources/icon/stats.png" type="Texture" id=11]
[ext_resource path="res://resources/gamefonts/jumbo.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://resources/gamefonts/Pacifico.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://resources/scripts/HighscoreLabel.gd" type="Script" id=14]
[ext_resource path="res://resources/scripts/LastscoreLabel.gd" type="Script" id=15]
[ext_resource path="res://resources/icon/coin.png" type="Texture" id=16]
[ext_resource path="res://resources/scripts/CoinsLabel.gd" type="Script" id=17]
[ext_resource path="res://settingsstyle.tres" type="StyleBox" id=18]
[ext_resource path="res://TextureButton.gd" type="Script" id=19]
[ext_resource path="res://resources/scripts/SoundButton.gd" type="Script" id=20]
[ext_resource path="res://closebutton.tres" type="StyleBox" id=21]
[ext_resource path="res://admob-lib/admob.gd" type="Script" id=22]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.956863, 0.776471, 0.156863, 1 )
border_color = Color( 0.8, 0.8, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.956863, 0.776471, 0.156863, 1 )
border_color = Color( 0.8, 0.8, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.980392, 0.141176, 0.0313726, 1 )
border_color = Color( 0.486275, 0.141176, 0.0235294, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 1 )
shadow_size = 5
shadow_offset = Vector2( 7, 7 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.956863, 0.776471, 0.156863, 1 )
border_color = Color( 0.8, 0.8, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=5]
size = 90
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=6]
size = 80
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=7]
size = 80
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=8]
size = 70
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=9]
size = 20
font_data = ExtResource( 13 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartupBackground" type="Sprite" parent="Control"]
position = Vector2( 3.77551, 1.8877 )
texture = ExtResource( 2 )
centered = false

[node name="SettingsButton" type="TextureButton" parent="Control"]
margin_left = 25.0
margin_top = 32.0
margin_right = 137.0
margin_bottom = 138.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Sprite" parent="Control"]
position = Vector2( 0, 50 )
texture = ExtResource( 4 )
centered = false

[node name="StartupJet" type="Sprite" parent="Control"]
position = Vector2( 576.624, 353.601 )
scale = Vector2( 0.6375, 0.73545 )
texture = ExtResource( 5 )
centered = false

[node name="PlayButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -289.0
margin_top = -314.0
margin_right = 289.0
margin_bottom = -145.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = SubResource( 1 )
custom_styles/normal = ExtResource( 6 )
icon = ExtResource( 7 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -497.0
margin_top = -314.0
margin_right = -85.0
margin_bottom = -145.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 9 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsButton" type="Button" parent="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 85.0
margin_top = -314.0
margin_right = 497.0
margin_bottom = -145.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = ExtResource( 10 )
icon = ExtResource( 11 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreTag" type="Label" parent="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 82.181
margin_top = -240.0
margin_right = 616.181
margin_bottom = -99.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.862745, 0.0784314, 0.0784314, 1 )
text = "HIGHSCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreLabel" type="Label" parent="Control"]
margin_left = 492.643
margin_top = 254.643
margin_right = 1231.64
margin_bottom = 557.643
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.862745, 0.0784314, 0.0784314, 1 )
text = "0
"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastScoreTag" type="Label" parent="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 79.5113
margin_top = -106.516
margin_right = 613.511
margin_bottom = 34.484
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.862745, 0.0784314, 0.0784314, 1 )
text = "LASTSCORE:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LastscoreLabel" type="Label" parent="Control"]
margin_left = 484.634
margin_top = 390.797
margin_right = 1223.63
margin_bottom = 693.797
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.862745, 0.0784314, 0.0784314, 1 )
text = "0
"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsTagSprite" type="Sprite" parent="Control"]
position = Vector2( 214.377, 622.364 )
scale = Vector2( 1.11352, 1.15767 )
texture = ExtResource( 16 )

[node name="CoinsTag" type="Label" parent="Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 268.762
margin_top = 19.9927
margin_right = 309.762
margin_bottom = 160.993
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.862745, 0.0784314, 0.0784314, 1 )
text = ":"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsLabel" type="Label" parent="Control"]
margin_left = 313.755
margin_top = 529.484
margin_right = 864.755
margin_bottom = 832.484
rect_min_size = Vector2( 1, 0.5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.862745, 0.0784314, 0.0784314, 1 )
text = "0
"
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsLabel" type="Label" parent="Control"]
margin_left = 417.428
margin_top = 624.87
margin_right = 1477.43
margin_bottom = 755.87
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.670588, 0.980392, 0.964706, 1 )
text = "Scroll screen to move    &    tap to shoot"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AdMob" type="Node" parent="Control"]
script = ExtResource( 22 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-9093002613352397/9703314252"
interstitial_id = "ca-app-pub-9093002613352397/4401642844"
rewarded_id = "ca-app-pub-9093002613352397/2049127463"

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 49.0
margin_top = 139.0
margin_right = 345.0
margin_bottom = 592.0
custom_styles/labeled_separator_left = ExtResource( 18 )
custom_styles/hover = ExtResource( 18 )
custom_styles/panel = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicButton" type="TextureButton" parent="PopupMenu"]
margin_left = 26.202
margin_top = 92.48
margin_right = 268.202
margin_bottom = 201.48
expand = true
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundButton" type="TextureButton" parent="PopupMenu"]
margin_left = 26.202
margin_top = 227.292
margin_right = 268.202
margin_bottom = 336.292
expand = true
script = ExtResource( 20 )

[node name="CloseButton" type="Button" parent="PopupMenu"]
margin_left = 57.541
margin_top = 368.703
margin_right = 238.541
margin_bottom = 413.703
custom_styles/hover = ExtResource( 21 )
custom_styles/pressed = ExtResource( 21 )
custom_styles/normal = ExtResource( 21 )
custom_fonts/font = SubResource( 9 )
text = "CLOSE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Control/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control/ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="Control/StatsButton" to="." method="_on_StatsButton_pressed"]
[connection signal="interstitial_closed" from="Control/AdMob" to="." method="_on_AdMob_interstitial_closed"]
[connection signal="pressed" from="PopupMenu/MusicButton" to="PopupMenu/MusicButton" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="PopupMenu/SoundButton" to="PopupMenu/SoundButton" method="_on_SoundButton_pressed"]
[connection signal="pressed" from="PopupMenu/CloseButton" to="." method="_on_CloseButton_pressed"]
